receta para creacion de infra

--- a/Desarrollo/comparape/04 Desarrollo/SCPPN_RAI.yml
+++ b/Desarrollo/comparape/04 Desarrollo/SCPPN_RAI.yml
@@ -1,4 +1,4 @@
-- name: Basic mysql provisioning example
+- name: Basic mysql provisioning example and ecs
   community.aws.rds:
     command: create
     instance_name: new-database
